➡️ Add redirect support

--- a/content/about-old.njk
+++ b/content/about-old.njk
@@ -1,6 +1,7 @@
 ---
 title: About
 rss: false
+redirectTo: '/about'
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 {% import "structure/components/components.njk" as macro with context %}
