--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -1,13 +1,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
+    <title>{% if redirectTo %}(Redirecting) {%endif%}{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
+    {#- Redirect -#}
+    {%- if redirectTo -%}
+    <script>location = '{{redirectTo}}';</script>
+    <meta http-equiv="refresh" content="0; url={{metadata.url}}{{redirectTo}}" />
+    <link rel="canonical" href="{{metadata.url}}{{redirectTo}}" />
+    <meta name="robots" content="noindex" />
+    {%- endif -%}
     {#- Places I claim on the internet -#}
     <link rel="me" href="https://indieweb.social/@frills">
     <link rel="me" href="https://social.lol/@frills">
     <link rel="me" href="https://frills.omg.lol">
-    {# OpenGraph #}
+    {#- OpenGraph -#}
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{metadata.url}}{{page.url}}">
     <meta property="og:image" content="https://dynamic-og-image-generator.vercel.app//api/generate?title={{ title | safe }}&author={{ metadata.author.name }}&avatar={{ metadata.avatar }}&websiteUrl={{ metadata.url }}&theme=shadesOfPurple" />
