--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -1,9 +1,18 @@
-<footer class="page__footer grid grid--offset grid--footer">
-    <nav aria-label="Footer" class="page__nav">
-        <ul>
-            <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
-            <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
-            <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
-        </ul>
-    </nav>
-</footer>
+<footer class="page__footer">
+    <div class=" grid grid--offset grid--footer">
+        <nav aria-label="Footer" class="page__nav">
+            <ul>
+                <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
+                <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
+                <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
+                <li>
+                    <div class="d-ib pos-r">
+                        <span class="proven" aria-hidden="true"></span>
+                        <span class="gold emoji" aria-hidden="true">🏵</span>
+                    </div>
+                    <a href="https://proven.lol/79f13f">Proven</a>
+                <li>
+            </ul>
+        </nav>
+    </div>
+</div>
