💬 Add status from status.lol

--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -88,6 +88,10 @@
   aspect-ratio: 16 / 9;
 }
 
+.pos-r {
+  position: relative;
+}
+
 .reading-width {
   max-width: 700px;
   width: 100%;
@@ -99,6 +103,13 @@
 
 .italic {
   font-style: italic;
+}
+
+.gold {
+  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    background-clip: border-box, border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .visually-hidden:not(:focus):not(:active) {
@@ -120,6 +131,18 @@
   font-size: 1.1rem;
   line-height: 1;
   font-variant-emoji: emoji;
+}
+
+.proven::before {
+  content: '';
+  width: 8px;
+  height: 4px;
+  border-bottom: 3px solid var(--bg);
+  border-left: 3px solid var(--bg);
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 img.mw-100 {
