--- a/content/index.njk
+++ b/content/index.njk
@@ -6,9 +6,6 @@ scripts: '
 	const n=new Date,h=n.getHours(),d=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit",hour12:!0,minute:"2-digit"});e=d.replace(/\s/g,""),document.querySelector("#localTime").innerHTML=e;const dhr=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit"});let st,stT;dhr>=0&&dhr<7?(st="offline",stT="Sleepin’"):dhr>=7&&dhr<9?(st="away",stT="Gettin’ ready!"):dhr>=9&&dhr<17?(st="donotdisturb",stT="Workin’"):dhr>=17&&dhr<23?(st="online",stT="Online now!"):dhr>=23&&dhr<24&&(st="offline",stT="Sleepin’"),document.querySelector("#status").dataset.status=st,document.querySelector("#statusText").innerText=stT;let m;h>=0&&h<12?m="Good morning":h>=12&&h<17?m="Good afternoon":h>=17&&h<24&&(m="Good evening"),document.querySelector("#greetingText").innerHTML=m;
 	</script>
 	<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
-	<script>
-	fetch("https://status.cafe/users/fri11s/status.json").then(t=>t.json()).then(t=>{if(!t.content.length){document.getElementById("statusCafe-status").innerHTML="No status yet.";return}document.getElementById("statusCafe-emoji").innerHTML=t.face,document.getElementById("statusCafe-time").innerHTML=t.timeAgo,document.getElementById("statusCafe-status").innerHTML=t.content});
-	</script>
 	<script>let user="ooohbrap",url="https://lastfm-last-played.biancarosa.com.br/"+user+"/latest-song",song=document.querySelector("#lfmSong"),lastplayed=document.querySelector("#lfmTime");fetch(url).then(function(e){return e.json()}).then(function(e){song.innerHTML=e.track.name+" - "+e.track.artist["#text"],lastplayedunix=parseInt(e.track.date.uts),lastplayed.innerHTML=timeSince(lastplayedunix)});var timeSince=function(e){"object"!=typeof e&&(e=new Date(e));var t,o=Math.floor(new Date().getTime()/1e3-e),r=Math.floor(o/31536e3);return r>=1?t="year":(r=Math.floor(o/2592e3))>=1?t="month":(r=Math.floor(o/86400))>=1?t="day":(r=Math.floor(o/3600))>=1?t="hour":(r=Math.floor(o/60))>=1?t="minute":(r=o,t="second"),(r>1||0===r)&&(t+="s"),r+" "+t+" ago"};</script>
 	<script src="/js/avatar.js"></script>
 '
@@ -73,16 +70,9 @@ scripts: '
 				<p class="small">Follow me for updates!</p>
 			</div>
 		</article>
-		<div class="dashboard__item">
-			{{ macro.callout(
-				element = 'article',
-				modifiers = 'callout--small statusCafe noscriptHide',
-				emoji = '<span id="statusCafe-emoji"></span>',
-				header = '<h2><a href="https://status.cafe/users/fri11s" class="hidden">Latest status</a></h2>
-					<span id="statusCafe-time"></span>',
-				body = '
-					<div id="statusCafe-status">No recent update :(</div>
-			') }}
+		<div class="dashboard__item noscriptHide">
+			<script src="https://status.lol/frills.js?time&fluent&pretty"></script>
+			{# <script>document.querySelector('.statuslol_content').prepend(document.createElement('h2')))</script> #}
 		</div>
 		<div class="dashboard__item">
 			{{ macro.callout(
