--- a/assets/css/base/_page.css
+++ b/assets/css/base/_page.css
@@ -42,5 +42,20 @@
 
 /* Footer */
 .page__footer {
-  padding: 3rem 0 1rem 0;
+  background-color: var(--bodybg);
+  max-width: 1600px;
+  margin: 2rem auto 0 auto;
+  padding: 1.5rem 1rem;
+}
+
+@media (min-width: 768px) {
+.page__footer {
+    padding: 1.5rem 1.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+.page__footer {
+    padding: 1.5rem 4rem 2rem 4rem;
+  }
 }
