--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url('./vendor/_reset.css');
 @import url('./vendor/_wcb.css');
+@import url('./vendor/_statuslol.css');
 
 @import url('./abstracts/_variables.css');
 @import url('./abstracts/_utility.css');
