--- a/content/links.njk
+++ b/content/links.njk
@@ -531,6 +531,14 @@ scripts: '<script>
     "bg": "#212121",
     "color": "#ffb300",
     "type": "link"
+  },
+  {
+    "name": "250KB Club",
+    "href": "https://250kb.club/",
+    "size": "11px",
+    "bg": "#222222",
+    "color": "white",
+    "type": "link"
   }
 ] %}
 
