🟧 Update RSS structure

--- a/content/index.njk
+++ b/content/index.njk
@@ -124,7 +124,7 @@ scripts: '
 	<div class="av-br">
 		<article class="dashboard__item dashboard__item--card dashboard__item--latestposts">
 			<header>
-				<h2 class="bg-wiggly">Latest posts</h2>
+				<h2>Latest posts</h2>
 			</header>
 			{%- set latestBlog = collections.posts | reverse | first -%}
 			{%- set latestExperiment = collections.experiments | reverse | first -%}
