--- a/assets/css/xml.css
+++ b/assets/css/xml.css
@@ -29,12 +29,15 @@ item title {
     margin-bottom: 10px;
 }
 
-item content {
+item description {
     max-width: 100%;
     max-height: 300px;
     overflow: auto;
-    font-family: monospace;
     padding: 1rem;
     margin: 1rem -1rem;
     background: rgba(255,255,255,0.3)
+}
+
+item description a {
+    display: inline;
 }
