--- a/content/rss/all.njk
+++ b/content/rss/all.njk
@@ -38,9 +38,9 @@
       {%- else %}
       <link>{{ absolutePostUrl }}</link>
       {%- endif %}
-      {% if post.data.description %}
-      <description>{{ post.data.description | safe }}</description>
-      {% endif %}
+      {%- if post.data.description %}
+      <description>{{ post.data.description | striptags(true) | escape | nl2br }}</description>
+      {% endif -%}
       {%- if post.data.updated %}
       <pubDate>{{ post.data.updated | dateToRfc822 }}</pubDate>
       {%- else %}
