--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -2,14 +2,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if redirectTo %}(Redirecting) {%endif%}{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
-    <meta name="description" content="{{ description or metadata.description }}">
     {#- Redirect -#}
     {%- if redirectTo -%}
     <script>location = '{{redirectTo}}';</script>
     <meta http-equiv="refresh" content="0; url={{metadata.url}}{{redirectTo}}" />
     <link rel="canonical" href="{{metadata.url}}{{redirectTo}}" />
     <meta name="robots" content="noindex" />
+    {%- else -%}
+    <link rel="canonical" href="https://ohhelloana.blog/">
     {%- endif -%}
+    <meta name="description" content="{{ description or metadata.description }}">
+    {#- RSS Feeds -#}
+    <link rel="alternate" type="application/rss+xml" title="Frills - Blog" href="https://frills.dev/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="Frills - Bookmarks" href="https://frills.dev/bookmarks.xml">
+    <link rel="alternate" type="application/rss+xml" title="Frills - Changelog" href="https://frills.dev/changelog.xml">
+    <link rel="alternate" type="application/rss+xml" title="Frills" href="https://frills.dev/all.xml">
     {#- Places I claim on the internet -#}
     <link rel="me" href="https://indieweb.social/@frills">
     <link rel="me" href="https://social.lol/@frills">
@@ -17,9 +24,9 @@
     {#- OpenGraph -#}
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{metadata.url}}{{page.url}}">
+    <meta name="description" content="{% if page.description %}{{ page.description | safe}}{% else %}{{metadata.description}}{% endif %}">
     <meta property="og:image" content="https://dynamic-og-image-generator.vercel.app//api/generate?title={{ title | safe }}&author={{ metadata.author.name }}&avatar={{ metadata.avatar }}&websiteUrl={{ metadata.url }}&theme=shadesOfPurple" />
     <meta property="og:image:alt" content="Page image for {{metadata.author.name}}">
-    {# <meta name="description" content="{% if page.description %}{{ page.description | safe}}{% endif %}"> #}
     {# Favicon -#}
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
