🟧 Update RSS structure

--- a/content/rss/all.njk
+++ b/content/rss/all.njk
@@ -5,7 +5,7 @@
   "metadata": {
     "title": "Frills",
     "subtitle": "All blog posts and updates from Frills",
-    "language": "en",
+    "language": "en-GB",
     "url": "https://frills.dev/",
     "author": {
       "name": "Frills",
