--- a/content/rss/bookmarks.njk
+++ b/content/rss/bookmarks.njk
@@ -5,7 +5,7 @@
   "metadata": {
     "title": "Frills - Bookmarks",
     "subtitle": "Bookmarked links from Frills",
-    "language": "en",
+    "language": "en-GB",
     "url": "https://frills.dev/bookmarks",
     "author": {
       "name": "Frills",
