💍 Add 250kb club webring

--- a/structure/components/webrings.njk
+++ b/structure/components/webrings.njk
@@ -7,5 +7,6 @@
 	{% include "structure/components/webrings/ladiesofthelinks.njk" %}
 	{% include "structure/components/webrings/genlissa.njk" %}
 	{% include "structure/components/webrings/bukmarkclub.njk" %}
+	{% include "structure/components/webrings/250kb.njk" %}
 
 </aside>
