--- a/content/colophon.njk
+++ b/content/colophon.njk
@@ -11,41 +11,44 @@ rss: false
 <h1>{{title}}</h1>
 <section>
 	<div class="reading-width">
-		<h2>Site links</h2>
-		<ul class="stars">
-			<li><a href="/changelog">Changelog</a>
-		</ul>
 		<h2>Technical information</h2>
 		<ul class="stars">
-			<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
+			<li>Built using <a href="https://www.11ty.dev/">eleventy</a> static site generator</li>
 			<li>Source code is on Github</li>
-			<li>Hosted on <a href="https://neocities.org" target="_blank">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy to Neocities guide</a></li>
-			<li>Coded in <a href="https://code.visualstudio.com/download" target="_blank">VSCode</a></li>
-			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/" target="_blank">Firefox</a> on Windows 11 and Mac OS Catalina</li>
+			<li>Hosted on <a href="https://neocities.org">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/">deploy to Neocities guide</a></li>
+			<li>Coded in <a href="https://code.visualstudio.com/download">VSCode</a></li>
+			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a> on Windows 11 and Mac OS Catalina</li>
 		</ul>
 		<h2>Credits</h2>
 		<ul class="stars">
-			<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
-			<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
-			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
-			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
-			<li>Stats and kudos by <a href="https://tinylytics.app/" target="_blank">Tinylytics</a></li>
-			<li><a href="https://virtualobserver.moe/ayano/comment-widget" target="_blank">Guestbook widget</a> by virtualobserver</li>
-			<li>A couple of the 80x15 badges are created by <a href="https://zeusofthecrows.github.io/stadt/gallery/" target="_blank">Zeus</a></li>
+			<li>Latest status is powered by <a href="https://status.lol/">status.lol</a></li>
+			<li><a href="https://github.com/biancarosa/lastfm-last-played">Last.fm last played script</a> by <a href="https://biancarosa.com.br/">Bianca Rosa</a></li>
+			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb">Cherry Bomb</a></li>
+			<li>Body font is <a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible</a></li>
+			<li>Stats and kudos by <a href="https://tinylytics.app/">Tinylytics</a></li>
+			<li><a href="https://virtualobserver.moe/ayano/comment-widget">Guestbook widget</a> by virtualobserver</li>
+			<li>A couple of the 80x15 badges are created by <a href="https://zeusofthecrows.github.io/stadt/gallery/">Zeus</a></li>
 		</ul>
 
 		<h2 id="javascript">JavaScript</h2>
 		<p>As my website built with a static site generator, if I want anything dynamic, I need to use JavaScript. You can still access the majority of the content of my website with JavaScript disabled, but here is a list of how it is used on my website:</p>
 		<ul class="stars">
-			<li>I use JavaScript to collect statistics on webpage vistor count. This is implemented using Goatcounter, a privacy focused website visitor counter. I use this to understand how useful my content is to people based on how often pages are visited. Pages visited and the country of your IP address are collected. You are able to <a href="#toggle-goatcounter">opt out of Goatcounter</a>.</li>
+			<li>I use JavaScrpt to collect statistics on webpage vistor count and for blog post kudos. This is implemented using Tinylytics, a GDPR-compliant, privacy-first website analytics tool. Cookies are not set and user identifiable information is not stored.</li>
 			<li>Guestbook uses JavaScript to fetch comments from a Google Sheet.</li>
 			<li>Theme and dark mode switcher uses JavaScript to change the emojis and styles of the website.</li>
 			<li>Website Carbon Badge uses JavaScript to evaluate the greeness of my website.</li>
-			<li>Latest status uses JavaScript to fetch status from status.cafe.</li>
+			<li>Latest status uses JavaScript to fetch status from status.lol.</li>
 			<li>Last music played uses JavaScript to fetch the track and artist from last.fm.</li>
 			<li>Cursor particle trail is loaded using JavaScript.</li>
-			<li>My local time is calculated using JavaScript.</li>
 			<li>Some <a href="/experiments">experiments</a> use JavaScript to change content dynamically.</li>
+		</ul>
+
+		<h2>Site links</h2>
+		<ul class="stars">
+			<li><a href="/changelog">Changelog</a>
+			<li><a href="https://tinylytics.app/sites/891">Vistor statistics</a>
+			<li><a href="https://proven.lol/79f13f">Proven.lol</a>
+			<li><a href="https://feedcanary.com/feed/9b76bf9c-56b3-4882-b271-9f6c6bfd1ea2">Feed canary for 'All' RSS feed</a>
 		</ul>
 	</div>
 </section>
@@ -55,9 +58,9 @@ rss: false
 {%- block right -%}
 	<h2 class="visually-hidden">RSS feeds</h2>
 	<ul class="unstyled">
-		<li><a href="/rss.xml" class="rss">Blog RSS feed</a></li>
-		<li><a href="/experiments.xml" class="rss">Experiments RSS feed</a></li>
-		<li><a href="/changelog.xml" class="rss">Changelog RSS feed</a></li>
 		<li><a href="/all.xml" class="rss">All RSS feed</a></li>
+		<li><a href="/rss.xml" class="rss">Blog & experiments RSS feed</a></li>
+		<li><a href="/bookmarks.xml" class="rss">Bookmarks RSS feed</a></li>
+		<li><a href="/changelog.xml" class="rss">Changelog RSS feed</a></li>
 	</ul>
 {% endblock %}
