🟧 Update head RSS meta

--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -13,10 +13,10 @@
     {%- endif -%}
     <meta name="description" content="{{ description or metadata.description }}">
     {#- RSS Feeds -#}
-    <link rel="alternate" type="application/rss+xml" title="Frills - Blog" href="https://frills.dev/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="Frills" href="https://frills.dev/all.xml">
+    <link rel="alternate" type="application/rss+xml" title="Frills - Blog & experiments" href="https://frills.dev/rss.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Bookmarks" href="https://frills.dev/bookmarks.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Changelog" href="https://frills.dev/changelog.xml">
-    <link rel="alternate" type="application/rss+xml" title="Frills" href="https://frills.dev/all.xml">
     {#- Places I claim on the internet -#}
     <link rel="me" href="https://indieweb.social/@frills">
     <link rel="me" href="https://social.lol/@frills">
