🟧 Update RSS structure

--- a/content/now.njk
+++ b/content/now.njk
@@ -1,5 +1,6 @@
 ---
 title: Now
+description: This is a now page, and if you have your own site, you should make one too!
 eleventyNavigation:
   key: Now
   emoji: <span class="emoji" aria-hidden="true">⌚</span>
