--- a/content/links.njk
+++ b/content/links.njk
@@ -242,15 +242,15 @@ scripts: '<script>
     "name": "no happy nonsense",
     "href": "https://nohappynonsense.net/",
     "size": "11px",
-    "bg": "#fcfce3",
+    "bg": "#fffaa1",
     "color": "black",
     "type": "link"
   }, {
     "name": "sleepy dev",
     "href": "https://sleepydev.neocities.org",
     "size": "11px",
-    "bg": "#f9f9f9",
-    "color": "blueviolet",
+    "bg": "blueviolet",
+    "color": "#f9f9f9",
     "type": "link"
   }, {
     "name": "Stephanie Eckles",
@@ -263,8 +263,8 @@ scripts: '<script>
     "name": "Cassidy Williams",
     "href": "https://cassidoo.co",
     "size": "11px",
-    "bg": "#fff",
-    "color": "rgb(235, 72, 136)",
+    "bg": "rgb(235, 72, 136)",
+    "color": "#fff",
     "type": "link"
   }, {
     "name": "Flamed Fury",
@@ -343,11 +343,11 @@ scripts: '<script>
     "bg": "#5f0979",
     "color": "#fff"
   }, {
-    "name": "justin Blogs Again!",
+    "name": "Justin Blogs Again!",
     "href": "https://teafuellednonsense.wordpress.com",
-    "size": "12px",
-    "bg": "#fff",
-    "color": "#00aadc"
+    "size": "10px",
+    "bg": "#00aadc",
+    "color": "#fff"
   }, {
     "name": "just nik",
     "href": "https://justnik.me/",
@@ -373,7 +373,7 @@ scripts: '<script>
   {
     "name": "cheyenne barton",
     "href": "https://cheyennebarton.com/",
-    "size": "14px",
+    "size": "12px",
     "bg": "#ffc929",
     "color": "#fa4723",
     "type": "link"
@@ -402,7 +402,7 @@ scripts: '<script>
     "name": "pansy",
     "href": "https://www.pansy-shop.com",
     "size": "16px",
-    "bg": "#ffe3e2",
+    "bg": "#edd647",
     "color": "#220967",
     "type": "link"
   }, {
