--- a/structure/components/webrings/250kb.njk
+++ b/structure/components/webrings/250kb.njk
@@ -1,3 +1,3 @@
 <div class="webring--250kb">
-	<a href="hhttps://250kb.club/frills-dev/">250kb Club</a>
+	<a href="https://250kb.club/frills-dev/">250kb Club</a>
 </div>
