--- a/content/index.njk
+++ b/content/index.njk
@@ -40,7 +40,7 @@ scripts: '
 			<img src="/images/piclog/piclog0.jpg" alt="Caucasian woman (me) with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog1.jpg" alt="People walking out of the sea as the sun rises through the clouds behind them" loading="lazy" width="100" height="100">
+			<img src="https://piclog.blue/latest.php?id=152" alt="" loading="lazy" width="100" height="100">
 		</figure>
 	</article>
 	<div class="dashboard__item av-br">
